# pynet

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: checks.yml  pylint.yml  tests.yml
pynet/: dataloader.py  losses.py  utils.py
pynet/model/: __init__.py  layers.py  modules.py  multi_conv_block.py  pynet.py
pynet/tests/: test_losses.py  test_pynet.py
pynet/tests/model/: test_pynet.py
